--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-redux": "^9.2.0",
     "styled-components": "^5.3.10"
   },
