--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.1.8",
+    "@reduxjs/toolkit": "^2.1.0",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~52.0.0",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.73.2",
+    "axios": "^1.7.9",
+    "expo": "^52.0.25",
+    "expo-av": "~15.0.2",
+    "expo-dev-client": "~5.0.9",
+    "expo-splash-screen": "^0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -28,7 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
   "private": true
