--- a/eas.json
+++ b/eas.json
@@ -22,7 +22,7 @@
     },
     "production": {
       "autoIncrement": true,
-      "distribution": "internal"
+      "distribution": "store"
     }
   },
   "submit": {
