--- a/eas.json
+++ b/eas.json
@@ -5,24 +5,40 @@
   },
   "build": {
     "development": {
-      "autoIncrement": true,
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "OPENAI_API_KEY": "$(OPENAI_API_KEY)"
+      }
     },
     "development-simulator": {
-      "autoIncrement": true,
       "developmentClient": true,
       "distribution": "internal",
       "ios": {
         "simulator": true
+      },
+      "env": {
+        "OPENAI_API_KEY": "$(OPENAI_API_KEY)"
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "resourceClass": "m-medium"
+      },
+      "env": {
+        "OPENAI_API_KEY": "$(OPENAI_API_KEY)"
+      }
     },
     "production": {
       "autoIncrement": true,
-      "distribution": "store"
+      "distribution": "store",
+      "ios": {
+        "resourceClass": "m-medium"
+      },
+      "env": {
+        "OPENAI_API_KEY": "$(OPENAI_API_KEY)"
+      }
     }
   },
   "submit": {
